Adjust image sizes.

--- a/1.hardware/1.raspberry_pi.md
+++ b/1.hardware/1.raspberry_pi.md
@@ -1,10 +1,12 @@
 ---
 title: raspberry_pi
 layout: default
-parent: 硬件/Hardware
+parent: Hardware
 nav_order: 1
 ---
 
 # Raspberry PI 5B
 
-![Raspberry Pi 5B](/img/pi5-labelled.jpg)
+<div align=center>
+<img src="../img/pi5-labelled.jpg"  height="300">
+<p>
