--- a/1.hardware/1.raspberry_pi.md
+++ b/1.hardware/1.raspberry_pi.md
@@ -7,10 +7,7 @@ nav_order: 1
 
 # Raspberry PI 5B
 
-<div align=center>
-<img src="../img/pi5-labelled.jpg"  height="300">
-<p>
-</div>
+![Raspberry PI 5B](../img/pi5-labelled.jpg)
 
 ## 1. Update and Clean System
 
