Update some details

--- a/4.assessment/5.fluxsand_main_loop.md
+++ b/4.assessment/5.fluxsand_main_loop.md
@@ -9,28 +9,42 @@ nav_order: 5
 
 ## 1. Description
 
-This report provides real-time performance insights into the **main execution loop** of the FluxSand application. The loop dispatches operations across different functional modes such as orientation sensing, time display, weather rendering, and user interaction.
+This report provides a structured evaluation of the **main execution loop** of the FluxSand application. The loop dispatches operations across different functional modes such as orientation sensing, time display, weather rendering, and user interaction.
 
-Each mode is tested individually using the method `Run()` under simulated inputs to evaluate how quickly the system reacts to mode switches.
+Each mode is tested individually using the method `Run()` under simulated conditions to verify that the loop structure handles transitions correctly and maintains user responsiveness.
 
-## 2. Functional Modes and Timing
+> ⚠️ **Note**: The following timing results include **artificial delays** (e.g., `sleep_for`) introduced in unit testing. These delays simulate expected user-facing update intervals and are **not representative of actual code execution time**.
 
-| Mode ID | Description                    | Run Time (ms) |
-|---------|--------------------------------|----------------|
-| 0       | Default idle / standby         | 8.05           |
-| 1       | Orientation / hourglass flow   | 9.87           |
-| 2       | Countdown timer                | 9.85           |
-| 3       | Stopwatch                      | 9.88           |
-| 4       | Pomodoro / Timed task mode     | 5.06           |
-| —       | **Total Execution Time**       | **42.91 ms**   |
+---
+
+## 2. Functional Modes and Simulated Timing
+
+| Mode ID | Description                    | Simulated Time (ms) |
+|---------|--------------------------------|----------------------|
+| 0       | Default idle / standby         | 8.05                 |
+| 1       | Orientation / hourglass flow   | 9.87                 |
+| 2       | Countdown timer                | 9.85                 |
+| 3       | Stopwatch                      | 9.88                 |
+| 4       | Pomodoro / Timed task mode     | 5.06                 |
+| —       | **Total Simulated Time**       | **42.91 ms**         |
+
+---
 
 ## 3. Analysis
 
-- All five modes **completed in under 10 ms**, with mode 4 (Pomodoro) being the fastest.
-- The **entire test suite completed in under 43 ms**, which suggests that a full cycle through all logic branches is efficiently handled.
-- Mode-specific latency remained consistent across runs, indicating reliable behavior even when switching between task states.
-- The average per-mode latency (~8.6 ms) confirms that the main loop supports **more than 100 Hz updates**, sufficient for responsive user feedback.
+- Each mode's `Run()` method includes a **simulated fixed delay** to emulate its expected user interaction cadence or visual update rate.
+- These artificial timings help verify that the application logic respects a stable time budget per mode and avoids blocking the main loop.
+- With all five modes executing in under 50 ms total (simulated), the loop structure supports **at least 20 Hz task dispatching**, even in worst-case mode cycling.
+- In practice, the real execution time will be **significantly shorter**, allowing the system to support much higher update rates or reserve time for background threads.
+
+---
 
 ## 4. Conclusion
 
-The main control loop of FluxSand performs reliably across all modes, with sub-10ms execution ensuring **fast user interaction** and seamless mode switching. The system meets the demands of real-time interactivity without overloading CPU resources.
+While the execution times presented here reflect **deliberately introduced delays** rather than true runtime performance, the evaluation confirms:
+
+- The **main task loop is well-structured** and handles multiple modes within tight, predictable time slots.
+- Even under conservative simulation, the system ensures **smooth mode switching** and **responsive behavior**.
+- For future optimization and profiling, hardware-in-the-loop tests without artificial delay will provide precise measurements of actual computational load.
+
+This test validates the design of the main loop as **real-time capable**, with sufficient headroom to support complex interactions and background inference.
