--- a/5.code/2.realtime.md
+++ b/5.code/2.realtime.md
@@ -66,9 +66,9 @@ This event cascade ensures low-latency and deterministic response to physical mo
 
 | Realtime Path                          | Typical Latency   |
 |----------------------------------------|-------------------|
-| GPIO button press → callback           | < 3ms             |
-| Gesture motion → inference → GUI update| < 50ms            |
-| AHRS update frequency                  | ~100Hz            |
+| GPIO button press → callback           | < 20us             |
+| Gesture motion → inference → GUI update| < 15ms            |
+| AHRS update frequency                  | ~1000Hz            |
 
 All major paths have been analyzed and kept within interactive response times.
 
