--- a/5.code/3.memory.md
+++ b/5.code/3.memory.md
@@ -80,5 +80,5 @@ FluxSand achieves memory safety and efficiency by:
 
 This results in a robust system that runs reliably on embedded hardware without the risk of fragmentation or unpredictable memory growth.
 
-For profiling results or heap usage statistics, see the "Benchmarking" section.
+For profiling results or heap usage statistics, see the "Assessment" section.
 
